--- a/Rest API/backend/src/main/resources/application.properties
+++ b/Rest API/backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.data.mongodb.database=marseeys
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.auto-index-creation=true
+#spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.x1rzm13.mongodb.net/marseeys
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
