--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.7",
+    "react-toastify": "^9.0.8",
     "recharts": "^2.1.13",
     "web-vitals": "^2.1.4"
   },
